--- a/src/components/room-filter-page/room-filter-page.scss
+++ b/src/components/room-filter-page/room-filter-page.scss
@@ -134,6 +134,6 @@
     margin: 2.5625rem auto 2.375rem auto;
     grid-column: 1 / 4;
     text-align: center;
-    padding-right: 0.75rem;
+    padding-right: 0.875rem;
   }
 }
